fixed spacing

--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -87,8 +87,5 @@
 
 	.deadline-list {
 		overflow-y: auto;
-		.date-spacer {
-			margin-bottom: 2rem;
-		}
 	}
 }
